--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,6 +19,9 @@
         <testsuite name="VendorName Test Suite">
             <directory>tests</directory>
         </testsuite>
+        <testsuite name="Telepath Test Suite">
+            <directory>tests/Telepath</directory>
+        </testsuite>
     </testsuites>
     <logging>
         <junit outputFile="build/report.junit.xml"/>
@@ -28,4 +31,7 @@
             <directory suffix=".php">./src</directory>
         </include>
     </source>
+    <php>
+        <env name="TELEPATH_TOKEN" value="test"/>
+    </php>
 </phpunit>
