--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,7 @@
         "pestphp/pest-plugin-laravel": "^2.0||^3.0",
         "phpstan/extension-installer": "^1.3||^2.0",
         "phpstan/phpstan-deprecation-rules": "^1.1||^2.0",
-        "phpstan/phpstan-phpunit": "^1.3||^2.0",
-        "spatie/laravel-ray": "^1.35"
+        "phpstan/phpstan-phpunit": "^1.3||^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -64,10 +63,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Lowel\\Telepath\\Skeleton\\SkeletonServiceProvider"
+                "Lowel\\Telepath\\Telepath\\TelepathServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "Lowel\\Telepath\\Skeleton\\Facades\\Skeleton"
+                "Telepath": "Lowel\\Telepath\\Telepath\\Facades\\Telepath"
             }
         }
     },
