fix: settings for composer.json
- rename provider and aliases namespaces in compose.json file.

--- a/composer.json
+++ b/composer.json
@@ -63,10 +63,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Lowel\\Telepath\\Telepath\\TelepathServiceProvider"
+                "Lowel\\Telepath\\TelepathServiceProvider"
             ],
             "aliases": {
-                "Telepath": "Lowel\\Telepath\\Telepath\\Facades\\Telepath"
+                "Telepath": "Lowel\\Telepath\\Facades\\Telepath"
             }
         }
     },
