refactor: add project version into composer and change commands signature + fixes
- add parent::boot into TelepathServiceProvider::boot() method;n- replace signature from 'lowel:telegram...' on 'telepath:...';
- add version flag in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "lowel/telepath",
+    "version": "0.1.0",
     "description": "Telegram bot sdk for laravel inspired by vjik/telegram-bot-api",
     "keywords": [
         "lowel",
