--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require": {
         "php": "^8.3",
         "illuminate/contracts": "^10.0||^11.0||^12.0",
+        "opis/closure": "^4.3",
         "spatie/laravel-package-tools": "^1.16",
         "symfony/property-access": "^7.3",
         "symfony/serializer": "^7.3",
