--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,13 @@
     ],
     "require": {
         "php": "^8.3",
+        "ext-gmp": "*",
+        "ext-openssl": "*",
         "illuminate/contracts": "^10.0||^11.0||^12.0",
         "opis/closure": "^4.3",
         "spatie/laravel-package-tools": "^1.16",
         "symfony/property-access": "^7.3",
+        "symfony/psr-http-message-bridge": "^7.3",
         "symfony/serializer": "^7.3",
         "vjik/telegram-bot-api": "^0.9.1"
     },
