refactor: improve handler solving and executores contracts
- create Profile-based system (need to be improved in future updates)
- now all handlers based on clear function -> callable pattern (no more magic DI)
- info about active conversations now stored as index (no as value and callbacks)
- optimizations.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -30,5 +30,6 @@
     </source>
     <php>
         <env name="TELEPATH_TOKEN" value="test"/>
+        <env name="TESTING" value="true"/>
     </php>
 </phpunit>
