--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "symfony/property-access": "^7.3",
         "symfony/psr-http-message-bridge": "^7.3",
         "symfony/serializer": "^7.3",
-        "vjik/telegram-bot-api": "^0.9.1"
+        "phptg/bot-api": "^0.10"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
